[workspace]
members = [
  "benchmarks",
  "borsh",
  "borsh-derive",
  "borsh-derive-internal",
  "borsh-schema-derive-internal",
  "fuzz/fuzz-run",
  "miso-types",
]

  [workspace.metadata.workspaces]
  # shared version of all public crates in the workspace
  exclude = ["benchmarks", "fuzz/*"]
  version = "0.10.3"
