[package]
authors = ["Near Inc <hello@near.org>"]
categories = ["encoding", "network-programming"]
description = """
Binary Object Representation Serializer for Hashing
"""
edition = "2018"
homepage = "http://borsh.io"
license = "MIT OR Apache-2.0"
name = "borsh"
readme = "README.md"
repository = "https://github.com/near/borsh-rs"
version = "0.0.0"

[lib]
name = "borsh"
path = "src/lib.rs"

[[bin]]
name = "generate_schema_schema"
path = "src/generate_schema_schema.rs"

[dependencies]
borsh-derive = { path = "../borsh-derive" }
bytes = { version = "1", optional = true }
hashbrown = ">=0.11,<0.14"

[dev-dependencies]
bytes = "1"
# Enable the "bytes" feature in integ tests: https://github.com/rust-lang/cargo/issues/2911#issuecomment-1464060655
borsh = { path = ".", features = ["bytes"] }

[features]
const-generics = []
default = ["std"]
rc = []
std = []
