[package]
authors = ["Metaplex Developers <dev@metaplex.foundation>"]
description = "Expanded types for Borsh serialization"
edition = "2021"
homepage = "http://metaplex.com"
license = "Apache-2.0"
name = "miso-types"
repository = "https://github.com/metaplex-foundation/miso-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.10.3"
